--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ export REDIS_URL=redis://:password@localhost:6379
 
 # https://api.slack.com/apps/ABDHRMK62/install-on-team?success=1
 export HUBOT_SLACK_TOKEN=
+
+# Google calender
+export HUBOT_GOOGLE_OAUTH_CLIENT_ID=
+export HUBOT_GOOGLE_OAUTH_CLIENT_SECRET=
+export HUBOT_URL=http://localhost
+export HUBOT_GOOGLE_SCOPES=https://www.googleapis.com/auth/calendar
