Attempted to get google calendar integrated

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
+# Locale
+export HUBOT_TIMEZONE=Europe/London
+
+# Redis
 export REDIS_URL=redis://:password@localhost:6379
 
 # https://api.slack.com/apps/ABDHRMK62/install-on-team?success=1
 export HUBOT_SLACK_TOKEN=
 
 # Google calender
-export HUBOT_GOOGLE_OAUTH_CLIENT_ID=
-export HUBOT_GOOGLE_OAUTH_CLIENT_SECRET=
-export HUBOT_URL=http://localhost
-export HUBOT_GOOGLE_SCOPES=https://www.googleapis.com/auth/calendar
+export HUBOT_GOOGLE_SERVICE_ACCOUNT_KEY_FILE=
