--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "date-fns": "^1.29.0",
-    "googleapis": "^27.0.0",
+    "google-auth-library": "^1.6.1",
+    "googleapis": "^32.0.0",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
     "hubot-help": "^0.2.2",
